# us-employment-visuals

./: .gitignore  LICENSE  jace_notes.md  pyproject.toml
datasets/bls/: SeriesReport-20221130144628_237c6c.xlsx  SeriesReport-20221130144637_bca72a.xlsx  SeriesReport-20221130144643_69692f.xlsx  SeriesReport-20221130144650_ae32a5.xlsx  SeriesReport-20221130144655_e74a8c.xlsx  SeriesReport-20221130144657_ac9fdb.xlsx
tests/: test_us_econ.py
us-econ/: pyproject.toml
us_econ/: bokeh_basics.py  econ-visuals.html  econ-visuals.py  main.py
